buttons for single validationrun page added

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
@@ -34,7 +34,7 @@ $button-hover-color: #213FE0;
   background-color: #00AAE3;
   border-color: #00AAE3;
   transform: scale(0.9);
-  width: 0;
+  width: 2rem;
 }
 .btn-primary.edit_name_btn:not(.disabled):hover{
   color: #4760E5;
