--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -69,57 +69,105 @@
     <a class="btn btn-sm btn-primary btn-action" routerLink="/validate/" [queryParams]="{valrun_uuid: validationRun.id}"
        title="Load validation settings"><span><fa-icon [icon]="faIcons.faRedo"></fa-icon></span></a>
 
-<!--    {% if current_user %}-->
-<!--    {% if valrun not in copied_runs %}-->
-<!--    <button class="btn btn-sm btn-primary btn-action" title="Track this validation"-->
-<!--            onclick="ajax_attach_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>-->
-<!--    {% else %}-->
-<!--    <button class="btn btn-sm btn-primary btn-action" title="Remove this validation from your list"-->
-<!--            onclick="ajax_detach_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>-->
-<!--    {% endif %}-->
-<!--    {% endif %}-->
+    <!--    {% if current_user %}-->
+    <!--    {% if valrun not in copied_runs %}-->
+    <!--    <button class="btn btn-sm btn-primary btn-action" title="Track this validation"-->
+    <!--            onclick="ajax_attach_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>-->
+    <!--    {% else %}-->
+    <!--    <button class="btn btn-sm btn-primary btn-action" title="Remove this validation from your list"-->
+    <!--            onclick="ajax_detach_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>-->
+    <!--    {% endif %}-->
+    <!--    {% endif %}-->
 
   </span>
 
 </div>
 
-<!--Buttons shown on the validation list page (both custom and published)-->
-<div *ngIf="!validationList" class="col-sm" style="text-align: right; max-width: 25rem">
+<!--Buttons shown on the single validation page (both custom and published)-->
+<div *ngIf="!validationList" class="col-sm" style="text-align: right;">
+  <div *ngIf="isOwner && validationRun.is_unpublished; else elseSingleValidation" style="float: right"
+       [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
+    <button class="btn btn-sm btn-primary" title="Remove result" (click)="basicOnclick(validationRun)"><span
+      class="pi pi-times"></span> Remove
+    </button>
 
-<!--  {% if is_owner and val.is_unpublished %}-->
-<!--  <div style="float: right" class="patchButtonGroup{% if val.publishing_in_progress %} collapse {% endif %}">-->
-<!--    <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ val.id }}', true)"><span class="fas fa-times"></span> Remove</button>-->
-<!--    {% if val.is_archived %}-->
-<!--    <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ val.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>-->
-<!--    {% else %}-->
-<!--    <button class="btn btn-sm btn-primary" title="Extend lifespan" onclick="ajax_extend_result('{{ val.id }}', true)"><span class="fas fa-calendar-plus"></span> Renew</button>-->
-<!--    <button class="btn btn-sm btn-primary" title="Archive" onclick="ajax_archive_result('{{ val.id }}', true)"><span class="fas fa-archive"></span> Archive</button>-->
-<!--    {% endif %}-->
-<!--    {% if val.output_file %}-->
-<!--    <button type="button" title="Publish on Zenodo" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#publishDialog">-->
-<!--      <span class="fas fa-book" ></span> Publish-->
-<!--    </button>-->
-<!--    {% endif %}-->
-<!--    <a class="btn btn-sm btn-primary" title="Load settings" href="{% url 'validation' %}?valrun_uuid={{ val.id }}"><span class="fas fa-redo"></span> Load settings</a>-->
-<!--  </div>-->
-<!--  {% if val.output_file %}-->
-<!--  <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">-->
-<!--    <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>-->
-<!--    Publishing in progress...-->
-<!--  </div>-->
-<!--  {% endif %}-->
-<!--  {% else %}-->
-<!--  <div style="float: right;" class="patchButtonGroup">-->
-<!--    <a class="btn btn-sm btn-primary" title="Load settings" href="{% url 'validation' %}?valrun_uuid={{ val.id }}"><span class="fas fa-redo"></span> Load settings</a>-->
-<!--    {% if current_user %}-->
-<!--    {% if is_copied %}-->
-<!--    <button class="btn btn-sm btn-primary" title="Remove this validation from your list" onclick="ajax_detach_validation('{{ val.id }}', false)"><span class="fas fa-times"></span> Untrack </button>-->
-<!--    {% else %}-->
-<!--    <button class="btn btn-sm btn-primary" title="Track this validation" onclick="ajax_attach_validation('{{ val.id}}')"><span class="fas fa-plus"></span> Track </button>-->
-<!--    {% endif %}-->
-<!--    {% endif %}-->
-<!--  </div>-->
-<!--  {% endif %}-->
+    <button *ngIf="validationRun.is_archived; else elseIsArchived"
+            class="btn btn-sm btn-primary"
+            title="Un-archive"
+            (click)="basicOnclick(validationRun)">
+      <span class="pi pi-calendar"></span> Un-archive
+    </button>
+
+    <ng-template #elseIsArchived>
+      <button class="btn btn-sm btn-primary"
+              title="Extend lifespan"
+              (click)="basicOnclick(validationRun)">
+        <span class="pi pi-calendar-plus"></span> Renew
+      </button>
+      <button class="btn btn-sm btn-primary" title="Archive" (click)="basicOnclick(validationRun)">
+        <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span> Archive
+      </button>
+    </ng-template>
+
+    <button *ngIf="validationRun.output_file" type="button" title="Publish on Zenodo" class="btn btn-sm btn-primary"
+            data-toggle="modal"
+            data-target="#publishDialog">
+      <span class="pi pi-book"></span> Publish
+    </button>
+
+    <a class="btn btn-sm btn-primary" title="Load settings"
+       href="{% url 'validation' %}?valrun_uuid={{ validationRun.id }}">
+      <span> <fa-icon [icon]="faIcons.faRedo"></fa-icon></span> Load settings</a>
+
+    <div [ngClass]="{'patchButtonGroup': true,  'collapse': !validationRun.publishing_in_progress}"
+         style="float: right">
+      <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span>
+      </div>
+      Publishing in progress...
+    </div>
+
+  </div>
 
 
+  <ng-template #elseSingleValidation>
+    <div style="float: right;" class="patchButtonGroup">
+      <a class="btn btn-sm btn-primary" title="Load settings"
+         href="{% url 'validation' %}?valrun_uuid={{ validationRun.id }}">
+        <span><fa-icon [icon]="faIcons.faRedo"></fa-icon></span> Load
+        settings</a>
+
+      <button *ngIf="isCurrentUser && isCopied" class="btn btn-sm btn-primary"
+              title="Remove this validation from your list"
+              onclick=""><span class="pi pi-times"></span> Untrack
+      </button>
+
+      <button *ngIf="isCurrentUser && !isCopied" class="btn btn-sm btn-primary" title="Track this validation"
+              onclick=""><span class="pi pi-plus"></span> Track
+      </button>
+
+    </div>
+  </ng-template>
 </div>
+
+<!--        {% if is_owner and valrun.is_unpublished %}-->
+<!--        <div style="float: right;" class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">-->
+<!--          <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', true)"><span class="fas fa-times"></span> Remove</button>-->
+<!--          {% if valrun.is_archived %}-->
+<!--          <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>-->
+<!--          {% else %}-->
+<!--          <button class="btn btn-sm btn-primary" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span> Renew</button>-->
+<!--          <button class="btn btn-sm btn-primary" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span> Archive</button>-->
+<!--          {% endif %}-->
+<!--          {% if valrun.output_file %}-->
+<!--          <button type="button" title="Publish on Zenodo" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#publishDialog">-->
+<!--            <span class="fas fa-book" ></span> Publish-->
+<!--          </button>-->
+<!--          {% endif %}-->
+<!--        </div>-->
+<!--        {% if valrun.output_file %}-->
+<!--        <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">-->
+<!--          <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>-->
+<!--          Publishing in progress...-->
+<!--        </div>-->
+<!--        {% endif %}-->
+<!--        {% endif %}-->
