--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-
+@import "../buttons/buttons.component.scss";
 .expiry-icons{
   font-size: 1.5rem;
   padding: 5px;
